@@ -1,3 +1,10 @@
+2009-08-25  Felix Zielcke  <fzielcke@z-51.de>
+
+	* util/grub.d/00_header.in: Move check for the video backend of
+	gfxterm from here ...
+	* util/grub-mkconfig.in: ... to here.  Enable gfxterm if there's
+	a suitable video backend.
+
 2009-08-25  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	Fix breakage in grub-setup.
